# physical-ai-robotics-textbook

./: .env.example  .eslintrc  .gitignore  .prettierignore  .prettierrc  404.html  README.md  book.md  components.json  docusaurus.config.ts  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  prompt.md  sidebars.ts  sitemap.xml  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: code-review.yml  deploy.yml  huggingface-deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.70fff4b8.css  styles.f1d0cc24.css
assets/js/: 05b3f02b.9ce7341d.js  0b5b27a7.633e0691.js  0b5b27a7.f662964a.js  0e384e19.6df66f91.js  112c47b3.3573dc3e.js  112c47b3.ae60eddf.js  1262fdbb.e46df4a9.js  17896441.6007cd90.js  17896441.b53bba9f.js  18c41134.fe0fd555.js  195d54c8.52e0db16.js  199d8f57.1741e441.js  1a4337b4.1b2aa9fa.js  1a4337b4.ecc57887.js  1df93b7f.dfb68c7f.js  1e4232ab.9ded413d.js  1f391b9e.8dad9408.js  2237.3fbcb357.js  2729.30e94f1e.js  280a649d.c914c461.js  2996e73a.c5eb9d2e.js  3084110b.c797968f.js  33a3d5cd.8ed19335.js  35873868.a83f363e.js  393be207.59f1966e.js  (+91 more)
backend/: .env.example  README.md  api.py  app.py  config.py  main.py  models.py  pyproject.toml  rag_agent.py  requirements.txt  retrieval.py
blog/: atom.xml  index.html  rss.xml
docs/: deployment.md  mobile-sidebar-improvements.md  performance-monitoring.md  privacy.md  terms.md
markdown-page/: index.html
playwright-report/: index.html
plugins/: alias-plugin.cjs  tailwind-config.cjs
tests/: card-responsive.spec.ts  mobile-responsive.spec.ts  mobile-sidebar-audit.spec.ts  responsive-320px.spec.ts  setup.ts
validation-service/: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
validation-service/.github/workflows/: validation.yml
validation-service/docs/: README.md  api-reference.md  cli-reference.md  configuration.md  deployment.md  getting-started.md  index.md
validation-service/docs/api/: deployment-validation.md  quality-validation.md  test-execution.md
validation-service/scripts/: install.sh  run.sh
validation-service/src/: __init__.py
validation-service/src/api/: __init__.py  errors.py  main.py  models.py
validation-service/src/api/endpoints/: flaky_tests.py  health.py  history.py  results.py  validation.py
validation-service/src/cli/: __init__.py  args.py  formatters.py  main.py
validation-service/src/cli/commands/: config.py  flaky_tests.py  results.py  run.py  status.py
validation-service/src/core/: __init__.py  config.py  exceptions.py  logging.py  models.py  pipeline.py  schema.py  serialization.py  storage.py  utils.py
validation-service/src/deployment/: __init__.py  compatibility.py  config_validator.py  dependency_checker.py  models.py  pipeline_integration.py  security_scanner.py
validation-service/src/quality/: __init__.py  complexity.py  coverage.py  linter.py  models.py  reporter.py  security.py  validator.py
validation-service/src/testing/: __init__.py  flaky_detector.py  framework_detector.py  history.py  models.py  orchestrator.py  parallel_executor.py  pipeline_integration.py  report_aggregator.py  retry_handler.py
validation-service/src/testing/runners/: __init__.py  e2e.py  integration.py  unit.py
validation-service/tests/: __init__.py  conftest.py
validation-service/tests/acceptance/: __init__.py  test_deployment_validation.py  test_quality_validation.py  test_test_execution.py
validation-service/tests/api/: test_flaky_tests_endpoints.py  test_health_endpoints.py  test_history_endpoints.py  test_results_endpoints.py  test_validation_endpoints.py
validation-service/tests/cli/: test_config_command.py  test_flaky_tests_command.py  test_results_command.py  test_run_command.py  test_status_command.py
validation-service/tests/e2e/: test_api_workflow.py  test_cli_workflow.py  test_full_pipeline.py
validation-service/tests/fixtures/: __init__.py  mocks.py  sample_data.py
validation-service/tests/fixtures/sample_code/: clean_code.py  violations_code.py
validation-service/tests/fixtures/test_configs/: __init__.py  deployment_fixtures.py  pytest_config.py
validation-service/tests/integration/: __init__.py  test_deployment_pipeline.py  test_quality_pipeline.py  test_test_pipeline.py
validation-service/tests/unit/: __init__.py
validation-service/tests/unit/test_core/: test_models.py
validation-service/tests/unit/test_deployment/: __init__.py  test_config_validator.py  test_dependency_checker.py  test_security_scanner.py
validation-service/tests/unit/test_quality/: __init__.py  test_complexity.py  test_coverage.py  test_linter.py  test_models.py
validation-service/tests/unit/test_testing/: test_flaky_detector.py  test_orchestrator.py  test_runners.py
(+299 files in other folders)
